force-app/main/default/objects/Prospect__c/Prospect__c.object-meta.xml
<CustomObject>
    <label>Prospect</label>
    <nameField>
        <displayFormat>PROS - {000000}</displayFormat>
        <label>Prospect</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>