force-app/main/default/objects/Prospect__c/fields/Acq_Rent_Yield_test__c.field-meta.xml
<CustomField>
    <fullName>Acq_Rent_Yield_test__c</fullName>
    <formula>Gross_Yield__c/Cap_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acq Rent Yield test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>