force-app/main/default/objects/Prospect__c/fields/Acq_Source__c.field-meta.xml
<CustomField>
    <fullName>Acq_Source__c</fullName>
    <label>Acq Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entera</fullName>
            </value>
            <value>
                <fullName>Roofstock</fullName>
            </value>
            <value>
                <fullName>Offerpad</fullName>
            </value>
            <value>
                <fullName>Starlight Homes</fullName>
            </value>
            <value>
                <fullName>Zillow</fullName>
            </value>
            <value>
                <fullName>LGI Homes</fullName>
            </value>
            <value>
                <fullName>S&amp;S</fullName>
            </value>
            <value>
                <fullName>Ribbon</fullName>
            </value>
            <value>
                <fullName>Big State Home Buyers</fullName>
            </value>
            <value>
                <fullName>AD2 Capital</fullName>
            </value>
            <value>
                <fullName>HomeProp, LLC</fullName>
            </value>
            <value>
                <fullName>Lantern Real Estate Group</fullName>
            </value>
            <value>
                <fullName>KM Homes</fullName>
            </value>
            <value>
                <fullName>NetWorth Realty</fullName>
            </value>
            <value>
                <fullName>Guardian Bridge Group</fullName>
            </value>
            <value>
                <fullName>Project Copper</fullName>
            </value>
            <value>
                <fullName>Century Complete</fullName>
            </value>
            <value>
                <fullName>Opendoor</fullName>
            </value>
            <value>
                <fullName>Lennar</fullName>
            </value>
            <value>
                <fullName>M/I Homes</fullName>
            </value>
            <value>
                <fullName>Meritage Homes</fullName>
            </value>
            <value>
                <fullName>Rockhaven Homes</fullName>
            </value>
            <value>
                <fullName>Project Mercury</fullName>
            </value>
            <value>
                <fullName>DR Horton</fullName>
            </value>
            <value>
                <fullName>Sundae Homes</fullName>
            </value>
            <value>
                <fullName>L Audace</fullName>
            </value>
            <value>
                <fullName>Project Razor</fullName>
            </value>
            <value>
                <fullName>Al Hammons</fullName>
            </value>
            <value>
                <fullName>Privette Properties</fullName>
            </value>
            <value>
                <fullName>Pulte Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>