force-app/main/default/objects/Prospect__c/fields/Acq_Type__c.field-meta.xml
<CustomField>
    <fullName>Acq_Type__c</fullName>
    <label>Acq Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Bulk Acquisition</fullName>
            </value>
            <value>
                <fullName>Portfolio Bulk Acquisition</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>