force-app/main/default/objects/Prospect__c/fields/Acquisition_Fees__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Fees__c</fullName>
    <label>Acquisition Fees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>