force-app/main/default/objects/Prospect__c/fields/Actual_Monthly_HOA_UW__c.field-meta.xml
<CustomField>
    <fullName>Actual_Monthly_HOA_UW__c</fullName>
    <label>Actual Monthly HOA @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>