force-app/main/default/objects/Prospect__c/fields/Address_Record__c.field-meta.xml
<CustomField>
    <fullName>Address_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address Record</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>