force-app/main/default/objects/Prospect__c/fields/Adjusted_Gross_Yield__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Gross_Yield__c</fullName>
    <label>Adjusted Gross Yield</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>