force-app/main/default/objects/Prospect__c/fields/Adjusted_Gross_Yield_Score__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Gross_Yield_Score__c</fullName>
    <formula>IF(AND((Adjusted_Gross_Yield__c*100)&gt;=6.50,(Adjusted_Gross_Yield__c*100)&lt;=6.99),1.25,
IF(AND((Adjusted_Gross_Yield__c*100)&gt;=7.00,(Adjusted_Gross_Yield__c*100)&lt;=7.49),1.88,
IF((Adjusted_Gross_Yield__c*100)&lt;6.50,0.63,2.50)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Gross Yield Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>