force-app/main/default/objects/Prospect__c/fields/AGY__c.field-meta.xml
<CustomField>
    <fullName>AGY__c</fullName>
    <formula>Gross_Yield__c - Tax_Rate__c - ( (Monthly_HOA_UW__c*12) / (Final_Offer__c + Initial_Rehab_Estimate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>