force-app/main/default/objects/Prospect__c/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives the name of the Analyst</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Analyst/Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospect</relationshipName>
    <type>Lookup</type>
</CustomField>