force-app/main/default/objects/Prospect__c/fields/Analyst_Market_Rent__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Market_Rent__c</fullName>
    <label>Analyst Market Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>