force-app/main/default/objects/Prospect__c/fields/Analyst_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Underwriter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst/Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects2</relationshipName>
    <type>Lookup</type>
</CustomField>