force-app/main/default/objects/Prospect__c/fields/Annual_HOA__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA__c</fullName>
    <label>Annual HOA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>