force-app/main/default/objects/Prospect__c/fields/Annualized_Rent__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Rent__c</fullName>
    <formula>Estimated_Monthly_Rent__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>