force-app/main/default/objects/Prospect__c/fields/APN_Without_Unusual_Characters__c.field-meta.xml
<CustomField>
    <fullName>APN_Without_Unusual_Characters__c</fullName>
    <formula>LEFT(RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( APN__c ,&quot; &quot;, &quot;&quot;),&quot;-&quot;,&quot;&quot; ),&quot;&amp;&quot;,&quot;&quot;),&quot;@&quot;,&quot;&quot;),&quot;~&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;),&quot;#&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot;%&quot;,&quot;&quot;),&quot;$&quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;),&quot;^&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;!&quot;,&quot;&quot;),&quot;*&quot;,&quot;&quot;),&quot;_&quot;,&quot;&quot;),&quot;=&quot;,&quot;&quot;),&quot;{&quot;,&quot;&quot;),&quot;}&quot;,&quot;&quot;),&quot;|&quot;,&quot;&quot;),&quot;[&quot;,&quot;&quot;),&quot;]&quot;,&quot;&quot;),&quot;\&quot;&quot;,&quot;&quot;),&quot;:&quot;,&quot;&quot;),&quot;?&quot;,&quot;&quot;),&quot;&lt;&quot;,&quot;&quot;),&quot;&gt;&quot;,&quot;&quot;),&quot;;&quot;,&quot;&quot;),&quot;&apos;&quot;,&quot;&quot;),&quot;,&quot;,&quot;&quot;),25),25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APN Without Unusual Characters</label>
    <type>Text</type>
</CustomField>