force-app/main/default/objects/Prospect__c/fields/Auction_DetailsEnd_Time__c.field-meta.xml
<CustomField>
    <fullName>Auction_DetailsEnd_Time__c</fullName>
    <label>Auction Details/End Time</label>
    <type>DateTime</type>
</CustomField>