force-app/main/default/objects/Prospect__c/fields/Auction_DetailsStart_Time__c.field-meta.xml
<CustomField>
    <fullName>Auction_DetailsStart_Time__c</fullName>
    <label>Auction Details/Start Time</label>
    <type>DateTime</type>
</CustomField>