force-app/main/default/objects/Prospect__c/fields/Avg_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Avg_Prospect__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Prospect</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>