force-app/main/default/objects/Prospect__c/fields/Avg_School_Rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_School_Rating__c</fullName>
    <label>Avg School Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>