force-app/main/default/objects/Prospect__c/fields/Avg_School_Score__c.field-meta.xml
<CustomField>
    <fullName>Avg_School_Score__c</fullName>
    <formula>IF(AND(Avg_School_Rating__c&gt;=5.0,Avg_School_Rating__c&lt;=6.49),1.25,
IF(AND(Avg_School_Rating__c&gt;=6.5,Avg_School_Rating__c&lt;=7.99),1.88,
IF((Avg_School_Rating__c&lt;5.0),0.63,2.50)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg School Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>