force-app/main/default/objects/Prospect__c/fields/Bad_Debt__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt__c</fullName>
    <formula>-(Annualized_Rent__c*0.01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>