force-app/main/default/objects/Prospect__c/fields/Basement_Type__c.field-meta.xml
<CustomField>
    <fullName>Basement_Type__c</fullName>
    <label>Basement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>