force-app/main/default/objects/Prospect__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <description>Gives the number of bed</description>
    <label>Bed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>