force-app/main/default/objects/Prospect__c/fields/Best_Comparable__c.field-meta.xml
<CustomField>
    <fullName>Best_Comparable__c</fullName>
    <label>Best Comparable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>