force-app/main/default/objects/Prospect__c/fields/Best_Rent_Comp__c.field-meta.xml
<CustomField>
    <fullName>Best_Rent_Comp__c</fullName>
    <label>Best Rent Comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>