force-app/main/default/objects/Prospect__c/fields/Best_Sale_Comp__c.field-meta.xml
<CustomField>
    <fullName>Best_Sale_Comp__c</fullName>
    <label>Best Sale Comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>