force-app/main/default/objects/Prospect__c/fields/Broker_Commission_Credits__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission_Credits__c</fullName>
    <label>Broker Commission Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>