force-app/main/default/objects/Prospect__c/fields/Broker_Counter_Offer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Counter_Offer_Comments__c</fullName>
    <label>Broker Counter Offer Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>