force-app/main/default/objects/Prospect__c/fields/Broker_Counter_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Broker_Counter_Offer_Price__c</fullName>
    <label>Broker Counter Offer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>