force-app/main/default/objects/Prospect__c/fields/Broker_Initial_Rehab_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Broker_Initial_Rehab_Estimate__c</fullName>
    <label>Broker Initial Rehab Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>