force-app/main/default/objects/Prospect__c/fields/Broker_Property_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Property_Comments__c</fullName>
    <label>Broker Property Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>