force-app/main/default/objects/Prospect__c/fields/Broker_Rehab_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rehab_Comments__c</fullName>
    <label>Broker Rehab Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>