force-app/main/default/objects/Prospect__c/fields/Broker_Rent_Comparables__c.field-meta.xml
<CustomField>
    <fullName>Broker_Rent_Comparables__c</fullName>
    <label>Broker Rent Comparables</label>
    <length>255</length>
    <type>Text</type>
</CustomField>