force-app/main/default/objects/Prospect__c/fields/Broker_Requested_Offer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Requested_Offer_Comments__c</fullName>
    <label>Broker Requested Offer Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>