force-app/main/default/objects/Prospect__c/fields/Buyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email__c</fullName>
    <label>Buyer Email</label>
    <type>Email</type>
</CustomField>