force-app/main/default/objects/Prospect__c/fields/CAD_Link__c.field-meta.xml
<CustomField>
    <fullName>CAD_Link__c</fullName>
    <label>CAD Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>