force-app/main/default/objects/Prospect__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Terms And Restrictions</fullName>
            </value>
            <value>
                <fullName>Duplicate Offer</fullName>
            </value>
            <value>
                <fullName>Excessive Rehab</fullName>
            </value>
            <value>
                <fullName>Hazardous Conditions</fullName>
            </value>
            <value>
                <fullName>Listing Pending</fullName>
            </value>
            <value>
                <fullName>Listing Sold</fullName>
            </value>
            <value>
                <fullName>Long Term Lease In Place</fullName>
            </value>
            <value>
                <fullName>Low Rent Avm Confidence</fullName>
            </value>
            <value>
                <fullName>Low Sale Avm Confidence</fullName>
            </value>
            <value>
                <fullName>Neighborhood</fullName>
            </value>
            <value>
                <fullName>Not In Buy Box</fullName>
            </value>
            <value>
                <fullName>Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>Opportunity Rejected</fullName>
            </value>
            <value>
                <fullName>Opportunity User Removed</fullName>
            </value>
            <value>
                <fullName>Pre Offer Cancel</fullName>
            </value>
            <value>
                <fullName>Property On Septic</fullName>
            </value>
            <value>
                <fullName>Rent Restrictions</fullName>
            </value>
            <value>
                <fullName>Seller Leaseback Required</fullName>
            </value>
            <value>
                <fullName>Seller Type</fullName>
            </value>
            <value>
                <fullName>Sinkhole</fullName>
            </value>
            <value>
                <fullName>Solar Lease Must Be Assumed</fullName>
            </value>
            <value>
                <fullName>Subject To Firpta</fullName>
            </value>
            <value>
                <fullName>Transaction Type</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>