force-app/main/default/objects/Prospect__c/fields/Capex__c.field-meta.xml
<CustomField>
    <fullName>Capex__c</fullName>
    <label>Capex</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>