force-app/main/default/objects/Prospect__c/fields/Check_Score__c.field-meta.xml
<CustomField>
    <fullName>Check_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Score</label>
    <type>Checkbox</type>
</CustomField>