force-app/main/default/objects/Prospect__c/fields/Closing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Closing_Costs__c</fullName>
    <label>Closing Costs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>