force-app/main/default/objects/Prospect__c/fields/Closing_Credit__c.field-meta.xml
<CustomField>
    <fullName>Closing_Credit__c</fullName>
    <label>Closing Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>