force-app/main/default/objects/Prospect__c/fields/Closing_Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Credit_Comments__c</fullName>
    <label>Closing Credit Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>