force-app/main/default/objects/Prospect__c/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <label>Commission Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>