force-app/main/default/objects/Prospect__c/fields/Complete_Property_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Complete_Property_Estimates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Property Estimates</label>
    <type>Checkbox</type>
</CustomField>