force-app/main/default/objects/Prospect__c/fields/Complete_Underwriting_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Complete_Underwriting_Estimates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Underwriting Estimates</label>
    <type>Checkbox</type>
</CustomField>