force-app/main/default/objects/Prospect__c/fields/Contacts_for_Contract__c.field-meta.xml
<CustomField>
    <fullName>Contacts_for_Contract__c</fullName>
    <label>Contacts for Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>