force-app/main/default/objects/Prospect__c/fields/Contract_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Date__c</fullName>
    <label>Contract Close Date</label>
    <type>Date</type>
</CustomField>