force-app/main/default/objects/Prospect__c/fields/Converted_to_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Pipeline</label>
    <type>Checkbox</type>
</CustomField>