force-app/main/default/objects/Prospect__c/fields/Converted_to_Pipeline_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Pipeline_Date__c</fullName>
    <label>Converted to Pipeline Date</label>
    <type>Date</type>
</CustomField>