force-app/main/default/objects/Prospect__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>IF(ISBLANK( Address_Record__r.Validated_County__c ), Address_Record__r.County__c, Address_Record__r.Validated_County__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County</label>
    <type>Text</type>
</CustomField>