force-app/main/default/objects/Prospect__c/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <formula>Total_Invested__c*0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>