force-app/main/default/objects/Prospect__c/fields/Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>Debt_Service__c</fullName>
    <formula>Debt__c*0.065</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>