force-app/main/default/objects/Prospect__c/fields/Detached_Single_Family__c.field-meta.xml
<CustomField>
    <fullName>Detached_Single_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detached Single Family</label>
    <type>Checkbox</type>
</CustomField>