force-app/main/default/objects/Prospect__c/fields/doCancelProspect__c.field-meta.xml
<CustomField>
    <fullName>doCancelProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doCancelProspect</label>
    <type>Checkbox</type>
</CustomField>