force-app/main/default/objects/Prospect__c/fields/DuplicateAPN__c.field-meta.xml
<CustomField>
    <fullName>DuplicateAPN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DuplicateAPN</label>
    <type>Checkbox</type>
</CustomField>