force-app/main/default/objects/Prospect__c/fields/Elementary_School__c.field-meta.xml
<CustomField>
    <fullName>Elementary_School__c</fullName>
    <label>Elementary School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>