force-app/main/default/objects/Prospect__c/fields/Entera_ID__c.field-meta.xml
<CustomField>
    <fullName>Entera_ID__c</fullName>
    <description>Gives the Entera ID if generated from Entera</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID from the Source</inlineHelpText>
    <label>External Source ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>