force-app/main/default/objects/Prospect__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <formula>Total_Invested__c - Debt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>