force-app/main/default/objects/Prospect__c/fields/Escrow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Amount__c</fullName>
    <label>Escrow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>