force-app/main/default/objects/Prospect__c/fields/Est_Monthly_Rent_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Est_Monthly_Rent_Sq_Ft__c</fullName>
    <formula>(Annualized_Rent__c/Square_Feet__c)/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Monthly Rent/Sq Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>