force-app/main/default/objects/Prospect__c/fields/Estimated_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Rent__c</fullName>
    <label>Estimated Monthly Rent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>