force-app/main/default/objects/Prospect__c/fields/Executive_VP__c.field-meta.xml
<CustomField>
    <fullName>Executive_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive/VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects1</relationshipName>
    <type>Lookup</type>
</CustomField>