force-app/main/default/objects/Prospect__c/fields/Final_Offer__c.field-meta.xml
<CustomField>
    <fullName>Final_Offer__c</fullName>
    <label>Final Offer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>