force-app/main/default/objects/Prospect__c/fields/Final_Test_Formula_1__c.field-meta.xml
<CustomField>
    <fullName>Final_Test_Formula_1__c</fullName>
    <formula>Final_Offer__c + Initial_Rehab_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Test Formula 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>