force-app/main/default/objects/Prospect__c/fields/Gross_Levered_IRR__c.field-meta.xml
<CustomField>
    <fullName>Gross_Levered_IRR__c</fullName>
    <formula>3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Levered IRR</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>