force-app/main/default/objects/Prospect__c/fields/Gross_Yield__c.field-meta.xml
<CustomField>
    <fullName>Gross_Yield__c</fullName>
    <formula>Net_Revenue__c/ Total_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>