force-app/main/default/objects/Prospect__c/fields/Has_Busy_Street__c.field-meta.xml
<CustomField>
    <fullName>Has_Busy_Street__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Busy Street</label>
    <type>Checkbox</type>
</CustomField>