force-app/main/default/objects/Prospect__c/fields/Has_Heavy_Industry__c.field-meta.xml
<CustomField>
    <fullName>Has_Heavy_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Heavy Industry</label>
    <type>Checkbox</type>
</CustomField>