force-app/main/default/objects/Prospect__c/fields/Has_Septic__c.field-meta.xml
<CustomField>
    <fullName>Has_Septic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Septic</label>
    <type>Checkbox</type>
</CustomField>