force-app/main/default/objects/Prospect__c/fields/Has_Solar__c.field-meta.xml
<CustomField>
    <fullName>Has_Solar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Solar</label>
    <type>Checkbox</type>
</CustomField>