force-app/main/default/objects/Prospect__c/fields/Heated_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Heated_sq_ft__c</fullName>
    <label>Heated sq/ft</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>