force-app/main/default/objects/Prospect__c/fields/Heated_sqft__c.field-meta.xml
<CustomField>
    <fullName>Heated_sqft__c</fullName>
    <label>Heated sq/ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>