force-app/main/default/objects/Prospect__c/fields/High_School__c.field-meta.xml
<CustomField>
    <fullName>High_School__c</fullName>
    <label>High School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>