force-app/main/default/objects/Prospect__c/fields/HOA_Frequency__c.field-meta.xml
<CustomField>
    <fullName>HOA_Frequency__c</fullName>
    <label>HOA Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>