force-app/main/default/objects/Prospect__c/fields/HOA_Name_UW__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name_UW__c</fullName>
    <label>HOA Name @ UW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>