force-app/main/default/objects/Prospect__c/fields/HOA_Utiltiies__c.field-meta.xml
<CustomField>
    <fullName>HOA_Utiltiies__c</fullName>
    <label>HOA &amp; Utiltiies</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>