force-app/main/default/objects/Prospect__c/fields/HOA_UW_From_Source__c.field-meta.xml
<CustomField>
    <fullName>HOA_UW_From_Source__c</fullName>
    <label>HOA @ UW From Source</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>