force-app/main/default/objects/Prospect__c/fields/HOA_YN__c.field-meta.xml
<CustomField>
    <fullName>HOA_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA (Y/N)</label>
    <type>Checkbox</type>
</CustomField>